test/conformance/chainsaw/configs/dont-emit-success-events-upon-generateSuccessEvents-set-false/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: foo
  namespace: default
  labels:
    team: kyverno
