test/conformance/chainsaw/configs/dont-emit-success-events-upon-generateSuccessEvents-set-false/kyverno-configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: kyverno
  namespace: kyverno
data:
  generateSuccessEvents: "false"
