test/conformance/chainsaw/configs/dont-emit-success-events-upon-generateSuccessEvents-set-false/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: require-labels
  namespace: default
